CIV-11523  Revoking access to claim for claimant LiP after NoC and representative assigned